<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity_pale"
    android:background="@drawable/bg"
    >


    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/detail_book"
        android:textColor="@color/strong"
        android:textSize="21sp"
        app:layout_constraintEnd_toStartOf="@+id/dots"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/strelka"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/strelka"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/strelka"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dots"
        android:layout_width="23dp"
        android:layout_height="21dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/dots"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/book"
        android:layout_width="352dp"
        android:layout_height="378dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/palefire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/Pale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/pale"
        android:textColor="@color/strong"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/book"
        app:layout_constraintEnd_toEndOf="@+id/book"
        app:layout_constraintStart_toStartOf="@+id/book" />

    <TextView
        android:id="@+id/vladimir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baskerville"
        android:text="@string/vladimir_nabokov"
        android:textColor="@color/light"
        android:textSize="@dimen/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pale" />

    <ImageButton
        android:id="@+id/stockload"
        android:layout_width="124dp"
        android:layout_height="6dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vladimir"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/baskerville"
        android:text="@string/in_stock"
        android:textColor="@color/stock"
        app:layout_constraintStart_toEndOf="@+id/stockload"
        app:layout_constraintTop_toBottomOf="@+id/vladimir" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/baskerville"
        android:text="@string/desc"
        android:textColor="@color/light"
        android:textSize="@dimen/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockload" />

    <ImageButton
        android:id="@+id/buttton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/buttonshape"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baskerville"
        android:text="@string/gert"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        app:layout_constraintBottom_toBottomOf="@+id/buttton"
        app:layout_constraintEnd_toEndOf="@+id/buttton"
        app:layout_constraintStart_toStartOf="@+id/buttton"
        app:layout_constraintTop_toTopOf="@+id/buttton" />


</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>